# sqlfluff-plugin-extended-jinja

./: .gitignore  .pre-commit-config.yaml  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: ci.yml
src/sqlfluff_plugin_extended_jinja/: __init__.py  _black_wrapper.py  _jinja_common.py
src/sqlfluff_plugin_extended_jinja/rules/: EJ01.py  EJ02.py
src/sqlfluff_plugin_jinja/: __init__.py  _jinja_common.py  plugin_default_config.cfg
src/sqlfluff_plugin_jinja/rules/: EJ01.py  EJ02.py
test/rules/: rule_test_cases_test.py
test/rules/test_cases/: Rule_EJ01.yml  Rule_EJ02.yml
