[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sqlfluff-plugin-extended-jinja"
version = "0.1.0"
description = "SQLFluff plugin with Jinja formatting rules: block tags on own lines and Black-based expression formatting."
requires-python = ">=3.10"
license = "Apache-2.0"
readme = "README.md"
authors = [
    { name = "mauro-lanza" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Quality Assurance",
    "Framework :: SQLFluff",
]
dependencies = [
    "sqlfluff>=4.0",
]

[project.optional-dependencies]
jinjafmt = ["black>=23.0"]
dev = [
    "black>=23.0",
    "pytest>=7.0",
    "ruff>=0.6",
    "mypy>=1.10",
    "pre-commit>=3.5",
]

[project.urls]
Homepage = "https://github.com/mauro-lanza/sqlfluff-plugin-extended-jinja"
Repository = "https://github.com/mauro-lanza/sqlfluff-plugin-extended-jinja"
Issues = "https://github.com/mauro-lanza/sqlfluff-plugin-extended-jinja/issues"

[project.entry-points.sqlfluff]
sqlfluff_plugin_extended_jinja = "sqlfluff_plugin_extended_jinja"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
sqlfluff_plugin_extended_jinja = ["plugin_default_config.cfg"]

[tool.pytest.ini_options]
testpaths = ["test"]

[tool.ruff]
line-length = 120
target-version = "py310"
src = ["src", "test"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.10"
files = ["src"]
ignore_missing_imports = true
warn_unused_ignores = false
